--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+spring.thymeleaf.cache=false
+
+file.path=C:/imgs/upload/
